--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -1,9 +1,7 @@
 dependencies {
     compile project(':CWM')
-    compile group: 'com.univocity', name: 'univocity-parsers', version: '2.6.2'
-    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    compile group: 'com.opencsv', name: 'opencsv', version: '5.2'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.12'
-    //compile files('libs/jdm11.jar')
 
 }
 
