basis classes for deep learning implementation

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'Core'
 //include 'Association'
 include 'Classification'
 include 'Clustering'
+include 'DeepLearning'
 //include 'Transformation'
 //include 'DataWrapper'
 //include 'StringConstant'
